# dcc042-redes

./: CMakeLists.txt  README.md  client.py  compile.bat  server.cpp  server.py
cpp/: client.cpp  server.cpp
python/: client.py  server.py
